--- a/man/man1/ep3harvester.1
+++ b/man/man1/ep3harvester.1
@@ -78,6 +78,9 @@ Harvest groups from CSV files included configuration
 -init
 generate a settings JSON file
 .TP
+-eprintids
+harvest the eprintids indicated by the filename, one id per line
+.TP
 -people
 Harvest people from CSV files included configuration
 .TP
